// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > Should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
      Cesar
    </h1>
    <h3>
      Villalobos Olmos
    </h3>
    <p>
      Fifa, Call of Duty, Grand Theft Auto V, God of War Ragnarok
    </p>
    <h2>
      No Activo
    </h2>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
    >
      {
  "zinCode": "ABC-123",
  "country": "Mexico"
}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > Should match snapshot 2`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
    Cesar
  </h1>
  <h3>
    Villalobos Olmos
  </h3>
  <p>
    Fifa, Call of Duty, Grand Theft Auto V, God of War Ragnarok
  </p>
  <h2>
    No Activo
  </h2>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
  >
    {
  "zinCode": "ABC-123",
  "country": "Mexico"
}
  </p>
</div>
`;
